[package]
name = "iroh-proxy-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
derive_more = { version = "2.1.1", features = ["display"] }
dynosaur = "0.3.0"
http = "1.4.0"
httparse = "1.10.1"
iroh = "0.95"
iroh-blobs = "0.97.0"
n0-error = "0.1.3"
n0-future = "0.3.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["time"] }
tracing = "0.1.41"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
n0-tracing-test = "0.3.0"
